--- a/React/src/components/Footer/index.module.css
+++ b/React/src/components/Footer/index.module.css
@@ -7,6 +7,7 @@
   background-color: #001f3f;
   color: white;
   border-top: 1px solid black;
+  text-align: center;
 }
 
 .link {
@@ -15,4 +16,8 @@
 
 .link:hover {
   text-decoration: none;
+}
+
+.icons {
+  margin-left: 10px;
 }
