--- a/React/src/components/Homepage/index.module.css
+++ b/React/src/components/Homepage/index.module.css
@@ -1,13 +1,18 @@
 .main-div {
-    height: 665px;
-    background-image: url("https://smurf.shop/wp-content/uploads/2018/12/Project-Ashe-smurf.shop_.jpg");
-    background-size: 1600px 665px;
+    height: 800px;
+    background-image: url("https://www.supersmurfs.com/wp-content/uploads/2020/03/bgheader3-2.png");
+    background-position: right;
+    background-size: 900px 790px;
+    background-color: grey;
+    background-repeat: no-repeat;
+    width: 100%;
 }
 
 .header {
     color: white;
     font-size: 80px;
-    text-align: center;
+    margin-left: 135px;
+    /* text-align: center; */
     padding-top: 40px;
     font-weight: bolder;
     letter-spacing: 3px;
@@ -16,28 +21,31 @@
 .small-header {
     color: white;
     font-size: 30px;
+    margin-left: 15px;
     text-align: center;
+    width: 790px;
     padding-top: 20px;
     letter-spacing: 2px;
 }
 
 .links {
     margin-top: 15px;
-    text-align: center;
+    margin-left: 100px;
 }
 
 .link {
-    color: white;
+    color: black;
     font-size: 50px;
     margin-right: 30px;
 }
 
 .link:hover {
-    color: white;
+    color: indigo;
+    text-decoration: none;
 }
 
 .heading {
-    text-align: center;
+    margin-left: 260px;
     color: white;
     margin-top: 25px;
     font-size: 40px;
