Adding some styles

--- a/React/src/components/About/index.module.css
+++ b/React/src/components/About/index.module.css
@@ -8,6 +8,7 @@
     padding-top: 4%;
     padding-bottom: 160px;
     background-color: ghostwhite;
+    /* background-size: 1600px 800px; */
     /* padding-right: 20% */
 }
 
