--- a/React/src/components/Header/index.module.css
+++ b/React/src/components/Header/index.module.css
@@ -1,6 +1,6 @@
 .heading-div {
     padding-bottom: 0px;
-    background-color: #F0F0F0 ;
+    /* background-color: #F0F0F0 ; */
 }
   
 .heading-col {
