--- a/React/src/components/Details/index.module.css
+++ b/React/src/components/Details/index.module.css
@@ -6,6 +6,9 @@
 .image {
    width: 400px;
    height: 300px;
+   animation: fadeInRight 3s;
+   border-radius: 50px;
+   border: 1px solid black;
 }
 
 .bold {
@@ -27,3 +30,14 @@
 .red {
     color: red;
 }
+
+@keyframes fadeInRight {
+    0% {
+       opacity: 0;
+       transform: translateY(-90px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateY(0);
+    }
+ } 
